--- a/preprocessing/preprocessing.ipynb
+++ b/preprocessing/preprocessing.ipynb
@@ -332,7 +332,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Dialation"
+        "#Dilation"
       ],
       "metadata": {
         "id": "gwcFybK0Xjj5"
